suite intégration public

--- a/src/App.sass
+++ b/src/App.sass
@@ -6,5 +6,26 @@
   background-color: white
   height: 100vh
 
-.hauteur90
-  height: 70vh
+.banniereAPropos
+  background-image: linear-gradient( rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)),url(./img/banniereAPropos.svg)
+  background-repeat: no-repeat
+  background-size: cover
+  background-position: center
+  background-color: white
+  height: 50vh
+
+.bannierePub
+  background-image: url(./img/forcesavenir.svg)
+  background-repeat: no-repeat
+  background-size: cover
+  background-position: center
+  background-color: black
+  height: 20vh
+
+.banniereDemandes
+  background-image: url(./img/banniereDemandes.svg)
+  background-repeat: no-repeat
+  background-size: cover
+  background-position: center
+  background-color: white
+  height: 50vh
