--- a/src/App.sass
+++ b/src/App.sass
@@ -29,3 +29,11 @@
   background-position: center
   background-color: white
   height: 50vh
+
+  .banniereOffres
+    background-image: url(./img/banniereOffres.svg)
+    background-repeat: no-repeat
+    background-size: cover
+    background-position: center
+    background-color: white
+    height: 50vh
