--- a/src/style/stylesheets/layout.sass
+++ b/src/style/stylesheets/layout.sass
@@ -41,6 +41,8 @@ p, .btn-link, span, a, h4, h6
     color: green !important
 .rouge
     color: red !important
+a
+    margin: 10px
 /**************************************************/
 .banniereAccueil
     background-image: url(../../img/banniereAccueil.svg)
