affichage dynamique section admin

--- a/src/style/stylesheets/components.sass
+++ b/src/style/stylesheets/components.sass
@@ -14,3 +14,6 @@
     @include couleursBkg($couleurBkg: "bleu")
 .ajoutDemande, .ajoutOffre
     color: #307CAF !important
+/*Effacer le bouton du dropdown par défaut */
+.dropdown-toggle::after
+    display: none !important
