--- a/src/style/stylesheets/layout.sass
+++ b/src/style/stylesheets/layout.sass
@@ -16,6 +16,7 @@ p, .btn-link, span, a, h4, h6
         @include families($family: "Montserrat-Regular")
 /*background-color*/
 .fondBleu
+    color: white !important
     @include couleursBkg($couleurBkg: "bleu")
 
 /*Admin*/
@@ -58,7 +59,7 @@ a
     background-size: cover
     background-position: center
     background-color: white
-    height: 50vh
+    height: 70vh
 
 .bannierePub
     background-image: url(../../img/forcesavenir.svg)
@@ -74,7 +75,7 @@ a
     background-size: cover
     background-position: center
     background-color: white
-    height: 50vh
+    height: 70vh
 
 .banniereOffres
     background-image: url(../../img/banniereOffres.svg)
@@ -82,4 +83,4 @@ a
     background-size: cover
     background-position: center
     background-color: white
-    height: 50vh
+    height: 70vh
