affichage offres de stage

--- a/src/style/stylesheets/layout.sass
+++ b/src/style/stylesheets/layout.sass
@@ -84,3 +84,9 @@ a
     background-position: center
     background-color: white
     height: 70vh
+
+//text cliquable, comme un lien pour les secteurs d'activité
+.curseur
+    cursor: pointer
+.hauteurViewport
+    min-height: 45vh
